--- a/test.html
+++ b/test.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=chrome">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> 레이아웃 잡기 </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div id="container">
-        <div class="col w10">
-          <div class="icon">아이콘 1</div>
-          <div class="icon">아이콘 2</div>
-          <div class="icon">아이콘 3</div>
-        </div>
-        <div class="col w20">
-          <div class="icon2 row h40">영역1</div>
-          <div class="icon2 row h40">영역2</div>
-          <div class="icon2 row h20">영역3</div>
-        </div>
-        <div class="col w70">
-          <div class="icon3 row h80">영역4</div>
-          <div class="icon3 row h20">영역5</div>
-        </div>
+      <div class="col w10">
+        <div class="icon">아이콘 1</div>
+        <div class="icon">아이콘 2</div>
+        <div class="icon">아이콘 3</div>
       </div>
-
+      <div class="col w20">
+        <div class="icon2 row h40">영역1</div>
+        <div class="icon2 row h40">영역2</div>
+        <div class="icon2 row h20">영역3</div>
+      </div>
+      <div class="col w70">
+        <div class="icon3 row h80">영역4</div>
+        <div class="icon3 row h20">영역5</div>
+      </div>
+    </div>
 </body>
 </html>
