--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> 레이아웃 잡기 </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
