--- a/test.html
+++ b/test.html
@@ -5,22 +5,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <div id="container">
-      <div class="col w10">
-        <div class="icon">아이콘 1</div>
-        <div class="icon">아이콘 2</div>
-        <div class="icon">아이콘 3</div>
-      </div>
-      <div class="col w20">
-        <div class="icon2 row h40">영역1</div>
-        <div class="icon2 row h40">영역2</div>
-        <div class="icon2 row h20">영역3</div>
-      </div>
-      <div class="col w70">
-        <div class="icon3 row h80">영역4</div>
-        <div class="icon3 row h20">영역5</div>
-      </div>
+    <div class="box">box.</div>
+    <div class="container">
+    <div class="footerBox1">footerBox1</div>
+    <div class="footerBox2">footerBox2</div>
     </div>
 </body>
 </html>
