--- a/test.html
+++ b/test.html
@@ -5,10 +5,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="box">box.</div>
+    <div class="box">
+      <img src="images/1.jpg" alt="이미지">
+    </div>
+    <div class="box">
+      <img src="images/2.jpg" alt="이미지">
+    </div>
+    <div class="box">
+      <img src="images/3.jpg" alt="이미지">
+    </div>
+    <div class="box">
+      <img src="images/4.jpg" alt="이미지">
+    </div>
     <div class="container">
-    <div class="footerBox1">footerBox1</div>
-    <div class="footerBox2">footerBox2</div>
+      <div class="footerBox1">footerBox1</div>
+      <div class="footerBox2">footerBox2</div>
     </div>
 </body>
 </html>
