--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="box">
+    <div class="img_area">
       <article><img src="images/1.jpg" alt="이미지"></article>
     
       <article><img src="images/2.jpg" alt="이미지"></article>
