--- a/test.html
+++ b/test.html
@@ -8,12 +8,10 @@
 <body>
     <div class="box">
 
-      <figure>
-        <article class="art"><img class="image" src="images/1.jpg" alt="꽉꽉꽉 곽대리"></article>
-        <figcaption>꽉꽉꽉 곽대리</figcaption>
-      </figure>
 
-    
+      <article class="art"><img class="image" src="images/1.jpg" alt="꽉꽉꽉 곽대리"></article>
+      <p>꽉꽉꽉 곽대리</p>
+
       <article class="art"><img class="image" src="images/2.jpg" alt="커피잔"></article>
     
       <article class="art"><img class="image" src="images/3.png" alt="오리"></article>
