article display / align-items /

--- a/test.html
+++ b/test.html
@@ -10,8 +10,9 @@
 
 
       <article class="art"><img class="image" src="images/1.jpg" alt="꽉꽉꽉 곽대리"></article>
-      <p>꽉꽉꽉 곽대리</p>
-
+      <div>
+        <h2>꽉꽉꽉 곽대리</h2>
+      </div>
       <article class="art"><img class="image" src="images/2.jpg" alt="커피잔"></article>
     
       <article class="art"><img class="image" src="images/3.png" alt="오리"></article>
