--- a/draw.html
+++ b/draw.html
@@ -125,7 +125,14 @@
       <h2 class="comment">해피초원목장</h2>
       <article class="art"><img class="image" src="images/56.jpg" alt="아크앤북"></article>
       <h2 class="comment">아크앤북</h2>
-      <div class="footerBox1">footerBox1</div>
+      <div class="footerBox1">
+        <ins class="kakao_ad_area" style="display:none;"
+             data-ad-unit = "DAN-LMc4JCp8R0cE7TO0"
+             data-ad-width = "320"
+             data-ad-height = "50"></ins>
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
+      </div>
       <div class="footerBox2">footerBox2</div>
     </div>
 </body>
