--- a/draw.html
+++ b/draw.html
@@ -130,9 +130,9 @@
       <div class="footerBox2">footerBox2</div>
     </div>
     <ins class="kakao_ad_area" style="display:none;"
-         data-ad-unit = "DAN-LMc4JCp8R0cE7TO0"
-         data-ad-width = "320"
-         data-ad-height = "50"></ins>
+         data-ad-unit = "DAN-L7NX6paNFugF4Ybq"
+         data-ad-width = "728"
+         data-ad-height = "90"></ins>
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </body>
 </html>
