--- a/draw.html
+++ b/draw.html
@@ -129,10 +129,12 @@
       </div>
       <div class="footerBox2">footerBox2</div>
     </div>
-    <ins class="kakao_ad_area" style="display:none;"
-         data-ad-unit = "DAN-L7NX6paNFugF4Ybq"
-         data-ad-width = "728"
-         data-ad-height = "90"></ins>
-    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    <div class="ad">
+      <ins class="kakao_ad_area" style="display:none;"
+           data-ad-unit = "DAN-L7NX6paNFugF4Ybq"
+           data-ad-width = "728"
+           data-ad-height = "90"></ins>
+      <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    </div>
 </body>
 </html>
