넓어질경우2단

--- a/draw.html
+++ b/draw.html
@@ -13,117 +13,226 @@
     <div class="box">
         <article class="art"><img class="image" src="images/1.jpg" alt="꽉꽉꽉 곽대리"></article>
         <h2 class="comment">꽉꽉꽉 곽대리</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/2.jpg" alt="커피잔"></article>
         <h2 class="comment">커피잔 들고있는 손</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/3.png" alt="오리"></article>
         <h2 class="comment">오리</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/4.jpg" alt="호에에엥"></article>
         <h2 class="comment">와플곰</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/5.jpg" alt="늑대1"></article>
         <h2 class="comment">늑대1</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/6.jpg" alt="늑대2"></article>
         <h2 class="comment">늑대2</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/7.jpg" alt="늑대3"></article>
         <h2 class="comment">늑대3</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/8.jpg" alt="늑대4"></article>
         <h2 class="comment">늑대4</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/9.jpg" alt="뚱이"></article>
         <h2 class="comment">뚱이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/10.jpg" alt="바트 심슨"></article>
         <h2 class="comment">바트 심슨</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/11.jpg" alt="곰돌이 푸"></article>
         <h2 class="comment">곰돌이 푸</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/12.jpg" alt="피카츄"></article>
         <h2 class="comment">피카츄</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/13.jpg" alt="제리"></article>
         <h2 class="comment">제리</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/14.jpg" alt="튤립?"></article>
         <h2 class="comment">튤립</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/15.jpg" alt="등대"></article>
         <h2 class="comment">등대</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/16.jpg" alt="고양이"></article>
         <h2 class="comment">고양이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/17.jpg" alt="자는 춘식이"></article>
         <h2 class="comment">자는춘식이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/18.jpg" alt="고양이"></article>
         <h2 class="comment">고양이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/19.jpg" alt="고양이"></article>
         <h2 class="comment">고양이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/20.jpg" alt="사슴"></article>
         <h2 class="comment">사슴</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/21.jpg" alt="크림이"></article>
         <h2 class="comment">크림이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/22.jpg" alt="곰돌이 푸"></article>
         <h2 class="comment">곰돌이 푸</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/23.jpg" alt="스티치"></article>
         <h2 class="comment">스티치</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/24.jpg" alt="잠자는강아지"></article>
         <h2 class="comment">잠자는 강아지</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/25.jpg" alt="티몬"></article>
         <h2 class="comment">티몬</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/26.jpg" alt="몬스터주식회사"></article>
         <h2 class="comment">몬스터주식회사</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/27.jpg" alt="도날드덕"></article>
         <h2 class="comment">도날드덕</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/28.jpg" alt="스누피"></article>
         <h2 class="comment">스누피</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/29.jpg" alt="세숑"></article>
         <h2 class="comment">세숑</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/30.jpg" alt="이요르"></article>
         <h2 class="comment">이요르</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/31.jpg" alt="햄스터"></article>
         <h2 class="comment">햄스터</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/32.jpg" alt="지친마루"></article>
         <h2 class="comment">지친 마루</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/33.jpg" alt="고양이"></article>
         <h2 class="comment">고양이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/34.jpg" alt="잠자는마루"></article>
         <h2 class="comment">잠자는 마루</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/35.jpg" alt="무념무상"></article>
         <h2 class="comment">무념무상</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/36.jpg" alt="망그러진곰"></article>
         <h2 class="comment">망그러진곰</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/37.jpg" alt="짱구"></article>
         <h2 class="comment">짱구</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/38.jpg" alt="마루"></article>
         <h2 class="comment">마루</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/39.jpg" alt="마루"></article>
         <h2 class="comment">마루</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/40.jpg" alt="빵빵이"></article>
         <h2 class="comment">빵빵이</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/41.jpg" alt="마루"></article>
         <h2 class="comment">마루</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/42.jpg" alt="카페"></article>
         <h2 class="comment">카페</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/43.jpg" alt="청계천"></article>
         <h2 class="comment">청계천</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/44.jpg" alt="북촌"></article>
         <h2 class="comment">북촌</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/45.jpg" alt="남산타워"></article>
         <h2 class="comment">남산타워</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/46.jpg" alt="에펠탑"></article>
         <h2 class="comment">에펠탑</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/47.jpg" alt="시골슈퍼"></article>
         <h2 class="comment">시골슈퍼</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/48.jpg" alt="모르는집"></article>
         <h2 class="comment">모르는집</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/49.jpg" alt="투시도법"></article>
         <h2 class="comment">투시도법</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/50.jpg" alt="여의도"></article>
         <h2 class="comment">한강대교에서 보이는 여의도</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/51.jpg" alt="국립중앙박물관"></article>
         <h2 class="comment">국립중앙박물관</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/52.jpg" alt="한옥"></article>
         <h2 class="comment">국립중앙박물관_한옥</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/53.jpg" alt="여의도"></article>
         <h2 class="comment">이촌동쯤에서 보이는 여의도</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/54.jpg" alt="김유정역 기차"></article>
         <h2 class="comment">김유정역 기차</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/55.jpg" alt="해피초원목장"></article>
         <h2 class="comment">해피초원목장</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/56.jpg" alt="아크앤북"></article>
         <h2 class="comment">아크앤북</h2>
-
     </div>
     <div class="ad">
       <ins class="kakao_ad_area" style="display:none;"
