--- a/draw.html
+++ b/draw.html
@@ -234,6 +234,18 @@
         <article class="art"><img class="image" src="images/56.jpg" alt="아크앤북"></article>
         <h2 class="comment">아크앤북</h2>
     </div>
+    <div class="box">
+        <article class="art"><img class="image" src="images/57.jpg" alt="시골"></article>
+        <h2 class="comment">시골</h2>
+    </div>
+    <div class="box">
+        <article class="art"><img class="image" src="images/58.jpg" alt="시골_채색"></article>
+        <h2 class="comment">시골_채색</h2>
+    </div>
+    <div class="box">
+        <article class="art"><img class="image" src="images/59.jpg" alt="백술상회"></article>
+        <h2 class="comment">예산_백술상회</h2>
+    </div>
     <div class="ad">
       <ins class="kakao_ad_area" style="display:none;"
            data-ad-unit = "DAN-L7NX6paNFugF4Ybq"
