--- a/draw.html
+++ b/draw.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <div class="box">
+        <article class="art"><img class="image" src="images/61.jpg" alt="에버랜드"></article>
+        <h2 class="comment">에버랜드</h2>
+    </div>
+    <div class="box">
         <article class="art"><img class="image" src="images/60.jpg" alt="샛강다리"></article>
         <h2 class="comment">샛강다리</h2>
     </div>
